--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-content">
-          <h1 class="hero-title">Аналитический Центр<br>Открытых Источников</h1>
+          <h1 class="hero-title">Investigative Hub<br>Open-Source Intelligence</h1>
           <p class="hero-subtitle">Независимая аналитическая организация, специализирующаяся на исследованиях и верификации информации из открытых источников</p>
           <div class="hero-actions">
             <a href="submit.html" class="btn btn-primary">Подать заявку</a>
@@ -72,7 +72,7 @@
             <line x1="12" y1="17" x2="12.01" y2="17"/>
           </svg>
           <div>
-            <strong>Важное уведомление:</strong> АЦ ОСИНТ является частной некоммерческой организацией и не является государственным органом, правоохранительной структурой или органом расследования. Мы не обладаем полномочиями по проведению оперативно-розыскных мероприятий.
+            <strong>Важное уведомление:</strong> Следственный Центр (далее—СК) является частной, любительской некоммерческой организацией и не является государственным органом, правоохранительной структурой или органом расследования. Мы не обладаем полномочиями по проведению оперативно-розыскных мероприятий.
           </div>
         </div>
       </div>
