--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     <section class="page-header">
       <div class="container">
         <h1 class="page-title">Об организации</h1>
-        <p class="page-description">Аналитический Центр Открытых Источников — независимая организация, специализирующаяся на OSINT-исследованиях и верификации информации</p>
+        <p class="page-description">Следственный Центр — независимая организация, специализирующаяся на OSINT-исследованиях и верификации информации</p>
       </div>
     </section>
 
@@ -62,7 +62,7 @@
         <div class="two-column">
           <div class="content-block">
             <h2>Наша миссия</h2>
-            <p>Аналитический Центр ОСИНТ был создан с целью содействия гражданскому обществу в получении доступа к объективной и проверенной информации. Мы верим, что прозрачность и доступность информации являются фундаментом демократического общества.</p>
+            <p>Эта организация была создана с целью содействия гражданскому обществу в получении доступа к объективной и проверенной информации. Мы верим, что прозрачность и доступность информации являются фундаментом демократического общества.</p>
             <p>Наша миссия заключается в проведении независимых аналитических исследований, верификации информации из открытых источников и предоставлении гражданам инструментов для защиты их прав и интересов.</p>
             <p>Мы работаем исключительно с открытыми источниками информации, соблюдая действующее законодательство и этические принципы ответственного исследования.</p>
           </div>
